main form/page content

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,3 +16,14 @@
         </div>
       </div>
     </div>
+
+    <div class="col-sm-4">
+      <img class="burger" src="">
+      <h1 class="text-center text-primary">Eat-Da-Burger</h1>
+      <form action="/?_method=POST" method="POST">
+        <div class="form-group">
+          <input class="form-control" type="text" name="burger_name">
+        </div>
+        <button class="btn btn-primary btn-block" type="submit">Submit</button>
+      </form>
+    </div>
