--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
     </div>
 
     <div class="col-sm-4">
-      <img class="burger" src="">
+      <img class="burger" src="/public/images/">
       <h1 class="text-center text-primary">Eat-Da-Burger</h1>
       <form action="/?_method=POST" method="POST">
         <div class="form-group">
@@ -27,3 +27,16 @@
         <button class="btn btn-primary btn-block" type="submit">Submit</button>
       </form>
     </div>
+
+    <div class="col-sm-4">
+      <div class="panel panel-danger">
+      <div class="panel-heading">devoured</div>
+        <div class="panel-body">
+          {{#each eaten}}
+          <h4><span class="label label-warning">{{this.burger_name}}</span></h4>
+          {{/each}}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
