--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
     </div>
 
     <div class="col-sm-4">
-      <img class="burger" src="/public/images/">
+      <img class="burger" src="public\images\daburger.jpg">
       <h1 class="text-center text-primary">Eat-Da-Burger</h1>
       <form action="/?_method=POST" method="POST">
         <div class="form-group">
